--- a/index.html
+++ b/index.html
@@ -4,7 +4,52 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Images Resize JavaScript | Responsive</title>
+
+    <!-- Icon Meta Tags -->
+    <link rel="icon" type="image/svg" sizes="16x16" href="/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg"
+      sizes="32x32"
+      href="./assets/img/upload-icon.svg"
+    />
+    <link
+      rel="icon"
+      type="image/svg"
+      sizes="64x64"
+      href="./assets/img/upload-icon.svg"
+    />
+    <link
+      rel="icon"
+      type="image/svg"
+      sizes="256x256"
+      href="./assets/img/upload-icon.svg"
+    />
+    <link
+      rel="icon"
+      type="image/svg"
+      sizes="512x512"
+      href="./assets/img/upload-icon.svg"
+    />
+
+    <!-- Primary Meta Tags -->
+    <title>Resize & Compress | Images</title>
+    <meta name="title" content="Resize & Compress | Images" />
+    <meta name="description" content="Images Resize and Compress" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://zuytvvtibcgxahtk.surge.sh/" />
+    <meta property="og:title" content="Resize & Compress | Images" />
+    <meta property="og:description" content="Images Resize and Compress" />
+    <meta property="og:image" content="./assets/img/upload-icon.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://zuytvvtibcgxahtk.surge.sh/" />
+    <meta property="twitter:title" content="Resize & Compress | Images" />
+    <meta property="twitter:description" content="Images Resize and Compress" />
+    <meta property="twitter:image" content="./assets/img/upload-icon.svg" />
   </head>
 
   <body>
