--- a/index.html
+++ b/index.html
@@ -42,14 +42,20 @@
     <meta property="og:url" content="https://zuytvvtibcgxahtk.surge.sh/" />
     <meta property="og:title" content="Resize & Compress | Images" />
     <meta property="og:description" content="Images Resize and Compress" />
-    <meta property="og:image" content="./assets/img/upload-icon.svg" />
+    <meta
+      property="og:image"
+      content="https://zuytvvtibcgxahtk.surge.sh/assets/img/upload-icon.svg"
+    />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://zuytvvtibcgxahtk.surge.sh/" />
     <meta property="twitter:title" content="Resize & Compress | Images" />
     <meta property="twitter:description" content="Images Resize and Compress" />
-    <meta property="twitter:image" content="./assets/img/upload-icon.svg" />
+    <meta
+      property="twitter:image"
+      content="https://zuytvvtibcgxahtk.surge.sh/assets/img/upload-icon.svg"
+    />
   </head>
 
   <body>
