--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 
     <!-- Icon Meta Tags -->
-    <link rel="icon" type="image/svg" sizes="16x16" href="/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg"
+      sizes="16x16"
+      href="./assets/img/upload-icon.svg"
+    />
     <link
       rel="icon"
       type="image/svg"
